# xenogui

./: index.html  mainwindow.cpp  mainwindow.h  mainwindow.ui  xenogui.pro
client/: .gitignore  README.md  index.html  package-lock.json  package.json
client/src/: App.vue  main.js
client/src/components/: Control.vue  NodeList.vue  ROS.vue  TopicList.vue
server/: package.xml  server.py  setup.cfg  setup.py  test.py
static/css/: app.9c7d99121cb23ef1d2b252ca09787d22.css
static/js/: app.9e52c8667cc925a5fea9.js  app.9e52c8667cc925a5fea9.js.map  manifest.5f5e30e44e2145727e90.js  manifest.5f5e30e44e2145727e90.js.map  vendor.c560fb9b824f3472f9f9.js  vendor.c560fb9b824f3472f9f9.js.map
